[metadata]
name = pydyad
version = 0.1.0
classifier =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
python_requires = >=3.7
install_requires =
    numpy
    # dlio_profiler_py @ git+https://github.com/hariharan-devarajan/dlio-profiler.git
    pydftracer==1.0.2